--- a/packages/react-scripts/template/src/index.css
+++ b/packages/react-scripts/template/src/index.css
@@ -1,14 +1,17 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/*
+The :host tag is replaced by the webcomponent tag during build. It will then refer to the webcomponent itself.
+The actual react app is mounted in a div inside the webcomponent.
+
+All other styles will be prepended with :host during build so they are automatically scoped to the webcomponent.
+*/
+
+/* Style the webcomponent itself */
+:host{
+    display: block;
+    height: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+/* Style the mountpoint for the react app */
+:host > div{
+    height: 100%;
 }
